--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.card.Add"></activity>
+        <activity android:name=".ui.medication.Addmedication"></activity>
+        <activity android:name=".ui.card.Add" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
