--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
     defaultConfig {
         applicationId "com.health.healthapp"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -35,5 +35,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:25.3.1'
     implementation "androidx.cardview:cardview:1.0.0"
     implementation 'androidx.room:room-runtime:2.2.5'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.github.psinetron:slycalendarview:0.0.9'
     annotationProcessor 'androidx.room:room-compiler:2.2.5'
 }
